--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
 
         <section id="page-contact" class="contact">
             <div class="description">
-                <h2>Let's Connect</h2>
-                <p>Feel free to reach out for more information, <br> collab oportunities or just a friedly hello</p>
+                <h2>Vamos nos conectar</h2>
+                <p>Sinta-se à vontade para entrar em contato para obter mais informações, <br> 
+                    oportunidades de colaboração ou apenas um olá sincero,</p>
             </div>
             <a href="#" id="instagram"><i class="fa-brands fa-instagram"></i> Instagram </a>
-            <a href="" id="curriculo">View My Resume</a>
+            <a href="/assets/Curriculo_pedro_novaes (1).pdf" id="curriculo" download>Baixar meu curriculo</a>
         </section> <!-- End - contact -->
     </main> <!-- End - main -->
     <footer>
