melhorias no portifolio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="section-main" class="section-front">
             <div class="about-my">
                 <h1>
-                    Olá, meu nome é <span style="color:#ef4444">Pedro Novaes </span>
+                    Olá, meu nome é <span style="color:#ef4444">Pedro</span>
                     <br />
                     <span>Desenvolvedor FullStack</span>
                   </h1>
@@ -136,16 +136,36 @@
                     <!--<img src="images/dashboard_salao.png" alt="Project Image" class="modal-image" />--> 
                 </div>
             </div>
-            <div class="card">
+            <div class="card" >
                 <div class="image-container">
-                <img src="project-image.jpg" alt="Project Title" class="image" />
+                <img src="images/dentista.png" alt="Project Title" class="image" />
                 </div>
                 <div class="card-content">
-                <h3 class="card-title">Project Title</h3>
-                <p class="card-description">Project description goes here.</p>
+                <h3 class="card-title">Landing Page para Dentistas</h3>
+                <div class="tags">
+                    <span class="tag">HTML</span>
+                    <span class="tag">CSS</span>
+                    <span class="tag">Figma</span>
                 </div>
+                <p class="card-description">Uma landing page para dentista, com uma ótima copy, com chamada para ação, formulários e conexão com email ou Whatsapp.</p>
+                </div>
+                <button onclick="SiteDentista()">Ir para o site</button>
             </div>
-
+            <div class="card">
+                <div class="image-container">
+                <img src="images/nutricionista.png" alt="Project Title" class="image" />
+                </div>
+                <div class="card-content">
+                <h3 class="card-title">Landing Page para nutricionista</h3>
+                <div class="tags">
+                    <span class="tag">HTML</span>
+                    <span class="tag">CSS</span>
+                    <span class="tag">Figma</span>
+                </div>
+                <p class="card-description">Uma landing page para nutricionista, com uma ótima copy, com chamada para ação, formulários e conexão com email ou Whatsapp.</p>
+                </div>
+                <button onclick="SiteNutri()">Ir para o site</button>
+            </div>
             </div>
         </section>
 
